@@ -1,3 +1,7 @@
+2003-05-11	ujwal
+
+    * Added '+' in keypad mode.
+
 2003-05-09	ujwal
 
     * Applying transparency when setting background color from 
